--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
                 </div>
             </div>
             <div id="action">
-                <button >Show me more</button>
+                <button>Show me more</button>
             </div>
         </div>
     </div>
-    <div class="container">
+    <div id="what-we-do" class="container">
         <h2 class="has-first-block">What we do.</h2>
         <ul>
             <li>
@@ -249,7 +249,7 @@
     <div id="features">
         <div class="container">
             <h2 class="has-first-block">Features</h2>
-            <div>
+            <div id="features-list">
                 <div>
                     <img src="images/base1.jpg">
                     <h4>Product Design: Eames Chairs</h4>
@@ -272,36 +272,35 @@
         </div>
     </div>
     <div id="contact">
-        <div id="container">
-            <h2 class="has-first-block">Stay in touch</h2>
+        <h2 class="has-first-block container">Stay in touch</h2>
+        <div id="map"></div>
+        <div id="contact-info" class="container">
             <div>
-                <div>
-                    <h4>contact information</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique nec dolor non,
-                        ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida.</p>
-                    <p>Cras fermentum elit quis magna congue, vel sodales arcu vestibulum. Nunc lobortis dui magna, quis
-                        dapibus lacus </p>
-                </div>
-                <form>
-                    <div>
-                        <div>
-                            <label for="name">Your name</label>
-                            <input type="text" name="name" id="name">
-                        </div>
-                        <div>
-                            <label for="email">Your email</label>
-                            <input type="email" name="email" id="email">
-                        </div>
-                    </div>
-                    <div>
-                        <label for="messenger">Your messenger</label>
-                        <textarea name="messenger" id="messenger" cols="30" rows="10"></textarea>
-                    </div>
-                    <div>
-                        <button type="submit"> send messenger</button>
-                    </div>
-                </form>
+                <h4>contact information</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique nec dolor non,
+                    ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida.</p>
+                <p>Cras fermentum elit quis magna congue, vel sodales arcu vestibulum. Nunc lobortis dui magna, quis
+                    dapibus lacus </p>
             </div>
+            <form>
+                <div class="two-col">
+                    <div>
+                        <label for="name">Your name</label>
+                        <input type="text" name="name" id="name">
+                    </div>
+                    <div>
+                        <label for="email">Your email</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                </div>
+                <div>
+                    <label for="messenger">Your messenger</label>
+                    <textarea name="messenger" id="messenger" cols="30" rows="10"></textarea>
+                </div>
+                <div>
+                    <button type="submit"> send messenger</button>
+                </div>
+            </form>
         </div>
     </div>
     <footer>
